# my_first_bevy_game

./: Cargo.toml
src/: animation.rs  camera.rs  collision.rs  config.rs  enemy.rs  gui.rs  lib.rs  main.rs  movement.rs  player.rs  prelude.rs  resource.rs  setup.rs  state.rs  stepping.rs  utils.rs  world.rs
src/player/: gun.rs
src/player/gun/: bullet.rs
