[package]
name = "my_first_bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
# for dev build
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
# for release build
#bevy = { version = "0.13.2"}
rand = "0.9.0-alpha.1"
bevy_pancam = "0.11.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!